--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,12 +24,14 @@
 
         <activity
             android:name=".CreateAccountActivity"
-            android:label="Create Account">
+            android:label="Create Account"
+            android:screenOrientation="portrait">
         </activity>
 
         <activity
             android:name=".MainActivity"
-            android:label="PortaParty">
+            android:label="PortaParty"
+            android:screenOrientation="portrait">
 
         </activity>
 
