Rodney and I added our code together. Changed from my last github push: -Added Rodney Nav Drawer (need to fix the null pointer error when items clicked) -Only allow portrait mode.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -25,12 +24,14 @@
         <activity
             android:name=".CreateAccountActivity"
             android:label="Create Account"
+            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait">
         </activity>
 
         <activity
             android:name=".MainActivity"
             android:label="PortaParty"
+            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait">
 
         </activity>
